# Backspace_engine

./: .gitignore  CMakeLists.txt  Game_YR.sln  README.md  cmake_install.cmake  uniqness.txt  uniqueness.txt
Assets/: backspace_old.cpp
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
BackSpace/: BackSpace.vcxproj  BackSpace.vcxproj.filters  BackSpaceApp.cpp  BackSpaceApp.h  CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  notes.md  pch.h  placeholder.cpp
BackSpace/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
BackSpace/include/: BackSpace.h
Game_YR/: BabyGhost.cpp  BabyGhost.h  CMakeLists.txt  Game_YR.vcxproj  Game_YR.vcxproj.filters  GhostGame.cpp  GhostGame.h  Player.cpp  Player.h  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
